--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purpule_light">#B0A4FF</color>
+    <color name="purpule_dark">#806EF8</color>
+    <color name="plue_light">#AECDFF</color>
+    <color name="plue_light2">#99BBF3</color>
+    <color name="plue_dark">#5896FD</color>
+    <color name="pluedd">#1A1D26</color>
+    <color name="purple_3">#5741D7</color>
+    <color name="pluee">#4A79F3</color>
+    <color name="orange_light">#FD9B3D</color>
+    <color name="orange_dark">#FF952E</color>
 </resources>
