--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,10 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="ImageStyle">
+        <item name="cornerSize" > 16dp </item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
 </resources>
