--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/text_welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Welcome lets see your clothes for today"
+                android:text="@string/welcome"
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
                 android:textSize="16sp"/>
