handle date in sharedPreference

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,12 +77,11 @@
 
                     <TextView
                         android:id="@+id/text_temperature"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="4dp"
+                        android:layout_height="20dp"
                         android:layout_marginTop="32dp"
-                        android:layout_marginBottom="32dp"
                         android:textColor="@color/pluedd"
-                        android:textSize="20sp"
+                        android:textSize="24sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.20"
                         app:layout_constraintStart_toStartOf="parent"
