--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,43 +20,42 @@
                 android:id="@+id/text_welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_medium"
                 android:text="@string/welcome"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="16dp"
-                android:textSize="16sp"/>
+                android:textColor="@color/pluedd"
+                android:textSize="@dimen/text_medium" />
 
 
             <TextView
                 android:id="@+id/text_country_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:text="hgjghj"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
+                android:drawableStart="@drawable/location_on_24"
                 android:textColor="@color/pluedd"
-                android:textSize="16sp"/>
+                android:textSize="@dimen/text_medium" />
 
             <TextView
                 android:id="@+id/text_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="16dp"
-                android:text="lolo,o"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
                 android:textColor="@color/pluedd"
-                android:textSize="16sp" />
-
+                android:textSize="@dimen/text_medium" />
 
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/weather_cardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                app:cardCornerRadius="12dp"
+                android:layout_margin="@dimen/margin_medium"
+                android:layout_marginBottom="@dimen/margin_giant"
                 android:background="@color/plue_light"
-                app:cardElevation="4dp"
-                android:layout_marginBottom="50dp">
+                app:cardCornerRadius="@dimen/radius_semi_medium"
+                app:cardElevation="@dimen/elevation_small">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -68,7 +66,7 @@
                         android:id="@+id/image_weather"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginVertical="32dp"
+                        android:layout_marginVertical="@dimen/margin_giant"
                         android:src="@drawable/cloud2"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.856"
@@ -77,26 +75,25 @@
 
                     <TextView
                         android:id="@+id/text_temperature"
-                        android:layout_width="4dp"
-                        android:layout_height="20dp"
-                        android:layout_marginTop="32dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_giant"
                         android:textColor="@color/pluedd"
-                        android:textSize="24sp"
+                        android:textSize="@dimen/text_very_giant"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.20"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/image_weather" />
 
 
-
                     <LinearLayout
                         android:id="@+id/linear_pressure"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_large"
+                        android:layout_marginTop="@dimen/margin_very_giant"
+                        android:layout_marginBottom="@dimen/margin_medium"
                         android:orientation="vertical"
-                        android:layout_marginTop="64dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginBottom="16dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/text_temperature">
 
@@ -105,24 +102,23 @@
                             android:id="@+id/image_cloud"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_marginTop="24dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/cloud2" />
+                            android:src="@drawable/pre3" />
+
+                        <TextView
+                            android:id="@+id/text_cloud"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginVertical="@dimen/margin_tiny"
+                            android:text="@string/Pressure" />
 
                         <TextView
                             android:id="@+id/text_cloud_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="2dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_gravity="center"/>
-                        <TextView
-                            android:id="@+id/text_cloud"
-                            android:text="@string/cloud"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
-                            android:layout_gravity="center"/>
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="@dimen/margin_medium" />
 
                     </LinearLayout>
 
@@ -139,26 +135,23 @@
                             android:id="@+id/image_humidaty"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_marginTop="8dp"
-                            android:src="@drawable/hum3"
-                            android:layout_gravity="center" />
-
-                        <TextView
-                            android:id="@+id/text_humidity_value"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="2dp"
-                            android:layout_marginBottom="5dp"
-                            android:text="75"
-                            android:layout_gravity="center" />
+                            android:layout_gravity="center"
+                            android:src="@drawable/hum3" />
 
                         <TextView
                             android:id="@+id/text_humidity"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
-                            android:text="@string/humidity"
-                            android:layout_gravity="center" />
+                            android:layout_gravity="center"
+                            android:layout_marginVertical="@dimen/margin_tiny"
+                            android:text="@string/humidity" />
+
+                        <TextView
+                            android:id="@+id/text_humidity_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="@dimen/margin_medium" />
 
                     </LinearLayout>
 
@@ -173,28 +166,27 @@
 
                         <ImageView
                             android:id="@+id/image_wind"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_marginTop="8dp"
-                            android:src="@drawable/w3"
-                            android:layout_gravity="center"/>
-
-                        <TextView
-                            android:id="@+id/text_wind_value"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="2dp"
-                            android:layout_marginBottom="5dp"
-                            android:text="75"
-                            android:layout_gravity="center" />
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="@dimen/margin_small"
+                            android:src="@drawable/w3" />
 
                         <TextView
                             android:id="@+id/text_wind"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
-                            android:text="@string/wind"
-                            android:layout_gravity="center" />
+                            android:layout_gravity="center"
+                            android:layout_marginVertical="@dimen/margin_tiny"
+                            android:text="@string/wind" />
+
+                        <TextView
+                            android:id="@+id/text_wind_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="@dimen/margin_medium" />
+
 
                     </LinearLayout>
 
@@ -202,12 +194,18 @@
 
             </androidx.cardview.widget.CardView>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin_medium"
+                android:text="@string/outfit" />
+
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/image_clothes"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:layout_margin="@dimen/margin_giant"
                 android:scaleType="centerCrop"
-                android:layout_margin="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
